Test: Overflow Issue

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
   border-radius: 10px;
   overflow: auto;
   justify-content: center;
+  overflow: auto;
   
 }
 
